--- a/skill-checker/index.html
+++ b/skill-checker/index.html
@@ -41,23 +41,23 @@
 
 </div></div>
 
-<div class="front-box" style="font:bold 18px/28px Trebuchet MS;text-indent: 5px;text-align: center;line-height: 35px;background: url(./img/top.gif) top center no-repeat, url(./img/middle.gif) center no-repeat no-repeat, url(./img/bottom.gif) bottom no-repeat no-repeat;padding-top: 25px;padding-bottom: 25px;">
-<br>
-<span>This is a re-revival of Gumworms Skill Checker. </span>
-<span>The previous revival have gone dark. </span>
+<div class="front-box" style="font:bold 18px/28px Trebuchet MS;text-indent: 5px;text-align: center;/*line-height: 35px*/;background: url(./img/top.gif) top center no-repeat, url(./img/middle.gif) center no-repeat no-repeat, url(./img/bottom.gif) bottom no-repeat no-repeat;padding-top: 12px;padding-bottom: 12px;">
 <br><br>
-<span>Some UI backgrounds and Icons was not available from Wayback.</span>
-<br>
-<span>Some have been replaced as seemed fitting and needed. </span>
+<span>This is a resurrection of Gumworms Skill Checker. </span>
+<span>The previous revival has gone dark. </span>
 <br><br>
-<span>Select your career below, select your skills, copy the skillcode to easy share your skill set with others. </span>
-<br>
-<br></div>
+<span>Some missing backgrounds and icons have been replaced.</span>
+<br><br>
+<span>Select your career, skills and copy the Skill-Code to easily share your skill set with others. </span>
+<br><br>
+<span>Stats updating: In progress. </span>
+<br><br><br>
+</div>
 
 				<div id="contentRight" style="margin:auto;float:none;"><div id="c252" class="csc-default">    <div id="Results" >
         
     </div>
-</div><div id="c251" class="csc-default"><div id="charNavi" style="width: 650px; /*background: url(./img/bodyBg.png)*/; margin-left: -10px;margin-top:100px">
+</div><div id="c251" class="csc-default"><div id="charNavi" style="width: 650px; /*background: url(./img/bodyBg.png)*/; margin-left: -10px;margin-top:-270px">
  <h1>Choose your career:</h1><br>
  <span class="charNaviItem cutt" style="margin-left:10px;margin-right:10px;""><a href="cutthroat.html"></a></span>
  <span class="charNaviItem bucc" style="margin-left:10px;margin-right:10px;""><a href="buccaneer.html"></a></span>
