--- a/skill-checker/index.html
+++ b/skill-checker/index.html
@@ -50,7 +50,7 @@
 <br><br>
 <span>Select your career, skills and copy the Skill-Code to easily share your skill set with others. </span>
 <br><br>
-<span>Stats updating: In progress. </span>
+<span>Please report incorrect stats on PotBS Discord. </span>
 <br><br><br>
 </div>
 
