--- a/skill-checker/navy-officer.html
+++ b/skill-checker/navy-officer.html
@@ -15,7 +15,7 @@
 
 <script src="./js/javascript_93077bb238.js" type="text/javascript"></script>
 
-<title>gumworm: PotBS, Skill Checker: Navy Officer - Pirates of the Burning Sea </title>	 
+<title>gumworm: POTBS, Skill Checker: Navy Officer - Pirates of the Burning Sea </title>	 
 <script src="./js/pirates_jquery.js" type="text/javascript"></script>
     	 <script src="./js/pirates_custom.js" type="text/javascript"></script>
 		 <script src="./js/copytoclipboard.js" type="text/javascript"></script>
