--- a/skill-checker/index.html
+++ b/skill-checker/index.html
@@ -13,7 +13,7 @@
 
 <script src="./js/javascript_93077bb238.js" type="text/javascript"></script>
 
-<title>gumworm: PotBS Skill Checker: Pirates of the Burning Sea </title>	 <script src="./js/pirates_jquery.js" type="text/javascript"></script>
+<title>gumworm: POTBS Skill Checker: Pirates of the Burning Sea </title>	 <script src="./js/pirates_jquery.js" type="text/javascript"></script>
     	 <script src="./js/pirates_custom.js" type="text/javascript"></script>
 		 
 		 <style>
