--- a/skill-checker/privateer.html
+++ b/skill-checker/privateer.html
@@ -879,17 +879,19 @@
                     <li>Accuracy, All: +1</li>
                     <li>Maximum Ship Speed, Battle: +3%</li>
                     <li>Beam Reach Speed, Battle +4%</li>
-                    <li>Broad Reach Speed, Battle +4%</li></ul></div>
+                    <li>Broad Reach Speed, Battle +4%</li>
+					<li>Defense, All: +1</li>
+					<li>Ship Defeat XP(Missions): -50%</li></ul></div>
 
     <div class="discription 91" style="display: none;">
                     <h1>Terrorize</h1>
                     Description:<br>
-					Reduces target's effective crew for a short time. Damages crew over three seconds, recovers crew over 30 seconds and make the target immune to additional crew attacks for one minute.<br>
+					Debuff: Reduces target's effective crew for a short time. Damages crew over three seconds, recovers crew over 30 seconds and make the target immune to additional crew attacks for one minute.<br>
                     Requirements:
                     <ul><li>Target not anti-crew buff immune</li></ul>
                     Reset Timer: 5 minutes<br>
                     Target: Enemy<br>
-                    Duration: Crew damaged over 3 seconds / crew recovered over 30 seconds<br>
+                    Duration: Crew damaged over 3 seconds / crew recovered over 30 seconds / crew immune to attacks 1 minute<br>
                     Morale Cost: 40<br>
                     Range: 250y<br>
                     Target Effects:
@@ -903,7 +905,7 @@
 					Passive skill. Increases the dubloons received for sinking enemy ships.<br>
                     <ul><li>Passive Skill</li></ul>
                     Self Effects:
-                    <ul><li>Bonus Loot Chance: +7.5%</li>
+                    <ul><li>Bonus Loot Chance: +0.075</li>
                     <li>Doubloon Bonus, NPC Defeat: +30%</li></ul></div>
 
     <div class="discription 93" style="display: none;">
@@ -948,10 +950,10 @@
     <div class="discription 95" style="display: none;">
                     <h1>Break Formation</h1>
                     Description:<br>
-					Sail into the middle of a group of enemies and disrupt their formation, causing all enemies in range to lose control of tehir rudders for 5 seconds. Targets will be immune to stuns for 2 minutes afterwards.<br>
-                    Reset Timer: 8 minutes<br>
+					Sail into the middle of a group of enemies and disrupt their formation, causing all enemies within 250 yards to lose control of tehir rudders for 15 seconds. Targets will be immune to stuns for 2 minutes afterwards.<br>
+                    Reset Timer: 6 minutes<br>
                     Target: All enemies<br>
-                    Duration: 7 seconds<br>
+                    Duration: 15 seconds<br>
                     Morale Cost: 20<br>
                     Target Effects:
                     <ul><li>Stun Immunity for 2 minutes</li></ul></div>
