--- a/skill-checker/test-urlbuild-urlhash-and-copy2.html
+++ b/skill-checker/test-urlbuild-urlhash-and-copy2.html
@@ -21,7 +21,7 @@
 <script src="./js/pirates_jquery.js" type="text/javascript"></script>
     	 <script src="./js/pirates_custom.js" type="text/javascript"></script>
 		 <script src="./js/copytoclipboard.js" type="text/javascript"></script>
-		 <script src="./js/buildurl.js" type="text/javascript"></script>
+		
 		 <script src="./js/urlhash.js" type="text/javascript"></script>
 		 
 		 
@@ -1044,10 +1044,12 @@ for(var i = 0; i < hashParams.length; i++){
 
 <script>
 $('#open').click(function() {
-	var URLPart   = window.location.path,
+	var URLPart   = window.location.hostname,
+	CareerPart = 'test-urlbuild-urlhash-and-copy2.html',
+	hashPart = '#SkillCode=',
     CodePart = $('#SkillCode').val();
 					$('input[name=URL]').val(URLPart + CodePart);
-					var newWindow = window.open(URLPart + CodePart, '_blank');
+					var newWindow = window.open(URLPart + CareerPart + hashPart + CodePart, '_blank');
   newWindow.focus();
 });
 </script>
