--- a/skill-checker/test-urlbuild-urlhash-and-copy2.html
+++ b/skill-checker/test-urlbuild-urlhash-and-copy2.html
@@ -1049,7 +1049,7 @@ $('#open').click(function() {
 	hashPart = '#SkillCode=',
     CodePart = $('#SkillCode').val();
 					$('input[name=URL]').val(URLPart + CodePart);
-					var newWindow = window.open(URLPart + CareerPart + hashPart + CodePart, '_blank');
+					var newWindow = window.open(CareerPart + hashPart + CodePart, '_blank');
   newWindow.focus();
 });
 </script>
