--- a/skill-checker/test-urlbuild-urlhash-and-copy4.html
+++ b/skill-checker/test-urlbuild-urlhash-and-copy4.html
@@ -1045,8 +1045,8 @@ for(var i = 0; i < hashParams.length; i++){
 
 <script>
 $('#copybtn-tooltip2').click(function() {
-	var Part1 = window.location.pathname,
-	    Part2 = windows.location.hostname,
+	var Part1 = window.location.origin,
+	Part2 = window.location.pathname,
 	CareerPart = 'test-urlbuild-urlhash-and-copy4.html',
 	hashPart = '#SkillCode=',
     CodePart = $('#SkillCode').val();
