--- a/skill-checker/freetrader.html
+++ b/skill-checker/freetrader.html
@@ -383,7 +383,7 @@
                     <h1>Rum Ration</h1>
                     Description:<br>
 					Buff: Passing out an additional ration of rum to your crew will make them work harder but maintaining this positive effect may become expensive.
-					Consumes 5 units of Keg of Rum, Rough.<br>
+					<br>Consumes 5 units of Keg of Rum, Rough.<br>
                     Requirements:
                     <ul><li>5 units of Keg of Rum, Rough</li></ul>
 					<ul><li>You must be level 7</li></ul>
@@ -469,7 +469,7 @@
     <div class="discription 25" style="display: none;">
                     <h1>Disrupt Formation</h1>
                     Description:<br>
-					Attack Debuff (Primary). Reduces the accuracy and target tracking of the target. <br>[The reduction gets stronger with each additional hit in the broadside (up to a maximum of -6 accuracy and target tracking).]<br>
+					Attack Debuff (Primary). Reduces the accuracy and target tracking of the target. <br>The reduction gets stronger with each additional hit in the broadside (up to a maximum of -6 accuracy and target tracking).<br>
                     Reset Timer: 3 minutes<br>
                     Target: Enemy<br>
                     Duration: 1 minute debuff. Self-buff just for one broadside <br>
@@ -949,7 +949,8 @@
     <div class="discription 93" style="display: none;">
                     <h1>Provision Ally</h1>
                     Description:<br>
-					This skill launches a longboat, which will sails to your target and repair 25% of their armor and 20% of their sails. The longboat can be destroyed by the enemy. This skill consumes one Launch <br>
+					This skill launches a longboat, which will sails to your target and repair 25% of their armor and 20% of their sails. The longboat can be destroyed by the enemy. 
+					<br>This skill consumes one Launch <br>
                     Requirements:
                     <ul><li>You must have 1 Launch</li>
 					<li>Your morale must be at least 30</li></ul>
