--- a/skill-checker/navy-officer.html
+++ b/skill-checker/navy-officer.html
@@ -13,12 +13,13 @@
 <link rel="stylesheet" type="text/css" href="./css/jquery.css" media="all">
 <link rel="stylesheet" type="text/css" href="./css/copytoclipboard.css" media="all">
 
+<script src="./js/jquery-3.6.0.min.js" type="text/javascript"></script>
 <script src="./js/javascript_93077bb238.js" type="text/javascript"></script>
 
 <title>gumworm: POTBS, Skill Checker: Navy Officer - Pirates of the Burning Sea </title>	 
 <script src="./js/pirates_jquery.js" type="text/javascript"></script>
     	 <script src="./js/pirates_custom.js" type="text/javascript"></script>
-		 <script src="./js/copytoclipboard.js" type="text/javascript"></script>
+		 <script src="./js/urlhash.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -951,6 +952,18 @@
 </div>
 		</div>
     </div>
+	
+	<div id="Results" style="margin-bottom:400px">
+        
+        <div id="URLBox">Get link including skill code <input name="URL" type="text" id="URLField" style="display:none;">
+		<div class="tooltip"><button class="copybtn" ID="copyURLSkillCode" onmouseout="outFunc()">
+  <div class="tooltiptext" id="copybtn-tooltip2">Copy to clipboard</div>
+  Copy</button>
+</div>
+		
+		</div>
+    </div>
+	
 </div><div id="c248" class="csc-default"><div id="charNavi">
  <h1>Choose your career:</h1><br>
  <span class="charNaviItem cutt"><a href="cutthroat.html"></a></span>
@@ -1010,6 +1023,7 @@
                     } else { $("#Points").css("background-color", "green") }
 
             });
-      </script>   
+      </script> 
+<script src="./js/copytoclipboard.js" type="text/javascript"></script>	  
 </body>
 </html>
