--- a/skill-checker/privateer.html
+++ b/skill-checker/privateer.html
@@ -12,11 +12,12 @@
 <link rel="stylesheet" type="text/css" href="./css/jquery.css" media="all">
 <link rel="stylesheet" type="text/css" href="./css/copytoclipboard.css" media="all">
 
+<script src="./js/jquery-3.6.0.min.js" type="text/javascript"></script>
 <script src="./js/javascript_93077bb238.js" type="text/javascript"></script>
 
 <title>gumworm: POTBS, Skill Checker: Privateer - Pirates of the Burning Sea </title>	 <script src="./js/pirates_jquery.js" type="text/javascript"></script>
     	 <script src="./js/pirates_custom.js" type="text/javascript"></script>
-		 <script src="./js/copytoclipboard.js" type="text/javascript"></script>
+		 <script src="./js/urlhash.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -972,6 +973,18 @@
 </div>
 		</div>
     </div>
+	
+	<div id="Results" style="margin-bottom:400px">
+        
+        <div id="URLBox">Get link including skill code <input name="URL" type="text" id="URLField" style="display:none;">
+		<div class="tooltip"><button class="copybtn" ID="copyURLSkillCode" onmouseout="outFunc()">
+  <div class="tooltiptext" id="copybtn-tooltip2">Copy to clipboard</div>
+  Copy</button>
+</div>
+		
+		</div>
+    </div>
+	
 </div><div id="c251" class="csc-default"><div id="charNavi">
  <h1>Choose your career:</h1><br>
  <span class="charNaviItem cutt"><a href="cutthroat.html"></a></span>
@@ -1032,4 +1045,5 @@
 
             });
       </script>
+	  <script src="./js/copytoclipboard.js" type="text/javascript"></script>
       </body></html>
