--- a/skill-checker/navy-officer.html
+++ b/skill-checker/navy-officer.html
@@ -852,7 +852,7 @@
                     <li>Accuracy, All: +10</li></ul></div>
 
     <div class="discription 90" style="display: none;">
-                    &gt;<h1>Career: Navy</h1>
+                    <h1>Career: Navy</h1>
                     Description:<br>
 					As a member of the Navy career, your crew is disciplined and frequently drilled in cannon operations, allowing your guns to fire slightly faster.<br>
                     <ul><li>Passive Skill</li></ul>
